--- a/templates/py_js_compare.html
+++ b/templates/py_js_compare.html
@@ -184,7 +184,7 @@
 <h1 class="sidebar">{{ translate("Links") }}</h1>
 <ul>
     <li><a href="/">{{ translate("blog") }}</a></li>
-    <li><a href="twitter.com/ivoyager">twitter</a></li>
+    <li><a href="https://twitter.com/ivoyager">twitter</a></li>
     <li><a href="https://www.facebook.com/ilyaschurov">facebook</a></li>
     <li><a href="http://github.com/ischurov/pythonvjs">github</a></li>
 </ul>
